<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/linear_layout_without_weight"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/button1"
        android:textColor="@color/black"
        android:backgroundTint="@color/hijau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/button2"
        android:textColor="@color/black"
        android:backgroundTint="@color/kuning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/button3"
        android:textColor="@color/black"
        android:backgroundTint="@color/biru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/button4"
        android:textColor="@color/black"
        android:backgroundTint="@color/pink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="Output Of Linear"
        android:textColor="@color/hijau2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>